camio en pagina html

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -32,6 +32,7 @@
             <h3>Contacto:</h3>
             <a href="https://www.facebook.com">Facebook</a>
             <a href="https://www.instagram.com">Instagram</a>
+			<a href="https://github.com/IgnacioRamos1773/Evaluacion1.git">GitHub</a>
 
         </div>
 
